@@ -451,3 +451,14 @@ Changes to be committed:
 	modified:   ZGame/zero1iz3d/main.cpp
 	modified:   ZGame/zero1iz3d/main.h
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+d.2015/07/21.18_04_06.56.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
